samples/_failures_safe/1761642408_2eacb0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9243d4f8.c: In function ‘main’:
./samples/SAFE/__tmp_9243d4f8.c:157: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_9243d4f8.c:156:5: error: expected declaration or statement at end of input
  156 |     if
      |     ^~
